# solana_project_initializer

./: Cargo.toml  README.md
src/: cargo_setup.rs  config.rs  error.rs  main.rs  node_setup.rs  templates.rs
